--- a/kubernetes.yml.template
+++ b/kubernetes.yml.template
@@ -28,10 +28,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: webhook-svc
+  name: frontend-svc
 spec:
   selector:
-    app: webhook
+    app: frontend
   ports:
     - port: 4000
       targetPort: 3000
