--- a/wercker.yml
+++ b/wercker.yml
@@ -3,17 +3,20 @@ build:
   steps:
     - npm-install
     - script:
-        name: echo nodejs information
+        name: install nginx
         code: |
-          echo "node version $(node -v) running"
-          echo "npm version $(npm -v) running"
+          npm run-script build
+          apt install nginx -y
+          rm -rf /usr/share/nginx/html/*
+          cp ./build/* /usr/share/nginx/html
+          
+          
 push:
   steps:
     - internal/docker-push:
-            entrypoint: node index.js
             working-dir: $WERCKER_ROOT
             tag: $WERCKER_GIT_COMMIT
-            ports: "3000"
+            ports: "80"
             username: $DOCKER_USERNAME
             password: $OCI_AUTH_TOKEN
             repository: $DOCKER_REGISTRY/$DOCKER_REPO
