--- a/wercker.yml
+++ b/wercker.yml
@@ -6,14 +6,14 @@ build:
         name: install nginx
         code: |
           npm run-script build
-          apt install nginx -y
-          rm -rf /usr/share/nginx/html/*
-          cp ./build/* /usr/share/nginx/html
+          npm install -g serve
+          serve -s build
           
           
 push:
   steps:
     - internal/docker-push:
+            entrypoint: serve
             working-dir: $WERCKER_ROOT
             tag: $WERCKER_GIT_COMMIT
             ports: "80"
